# vwebrtc-audio-processing

./: Makefile.am  configure.ac  vwebrtc-audio-processing.pc
absl/strings/: string_view.h
absl/types/: optional.h
api/audio/: audio_frame.h
common_audio/signal_processing/: min_max_operations.c
common_audio/signal_processing/include/: signal_processing_library.h
modules/: Makefile.am
modules/audio_processing/: Makefile.am  audio_processing_impl.cc  audio_processing_impl.h
modules/audio_processing/aecm/: aecm_core.h
modules/audio_processing/include/: audio_processing.cc
rtc_base/: logging.cc  trace_event.h
